--- a/www.nass.gov.ng/bc55340c5441223b2b9461f9825a8ca5ec2203da.yml
+++ b/www.nass.gov.ng/bc55340c5441223b2b9461f9825a8ca5ec2203da.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 24 Jun 2017 03:33:07 GMT
+    - Sun, 25 Jun 2017 11:25:28 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=J%2CnVVJO3iP7odAlpxa6th1; path=/
+    - PHPSESSID=wWbC6aHCXh5Xy80e3ID6B1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 24 Jun 2017 03:33:07 GMT
+recorded_at: Sun, 25 Jun 2017 11:25:28 GMT
