--- a/www.nass.gov.ng/4204f29f23a607680fdf5473a8f5c9b4db40bc7d.yml
+++ b/www.nass.gov.ng/4204f29f23a607680fdf5473a8f5c9b4db40bc7d.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 24 Jun 2017 03:34:38 GMT
+    - Sun, 25 Jun 2017 11:26:19 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=EiP62wTBxDJ%2Ctd9ZVKqNy1; path=/
+    - PHPSESSID=jz3O-nqfDNqlAQ3ACst0a0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 24 Jun 2017 03:34:38 GMT
+recorded_at: Sun, 25 Jun 2017 11:26:19 GMT
