--- a/www.nass.gov.ng/983a02e94c2734dac31dd581bdfd3041bbc310b8.yml
+++ b/www.nass.gov.ng/983a02e94c2734dac31dd581bdfd3041bbc310b8.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 24 Jun 2017 03:36:17 GMT
+    - Sun, 25 Jun 2017 11:28:39 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=A0gMps94jV%2CH7A2q%2C%2Co503; path=/
+    - PHPSESSID=cFdj53KU7-vF7%2CjTq4rw33; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 24 Jun 2017 03:36:17 GMT
+recorded_at: Sun, 25 Jun 2017 11:28:40 GMT
