--- a/www.nass.gov.ng/58ea058c2eef55fd37862f67b5862d0b2e987e2b.yml
+++ b/www.nass.gov.ng/58ea058c2eef55fd37862f67b5862d0b2e987e2b.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 24 Jun 2017 03:40:11 GMT
+    - Sun, 25 Jun 2017 11:31:31 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=PAe78azphaZrJX%2CkeT-iT3; path=/
+    - PHPSESSID=QNVZvYZ-tAuSI4aohmt5G0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 24 Jun 2017 03:40:11 GMT
+recorded_at: Sun, 25 Jun 2017 11:31:31 GMT
