--- a/www.nass.gov.ng/69b1a54aa638ff138e9777d0b639c88d194c578a.yml
+++ b/www.nass.gov.ng/69b1a54aa638ff138e9777d0b639c88d194c578a.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 24 Jun 2017 03:43:35 GMT
+    - Sun, 25 Jun 2017 11:34:53 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=IruCKQQ4E2T0ieia7C1Gn3; path=/
+    - PHPSESSID=WgYusz%2CLJL2HJKsgyrmB13; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 24 Jun 2017 03:43:35 GMT
+recorded_at: Sun, 25 Jun 2017 11:34:53 GMT
