--- a/www.nass.gov.ng/3e9369afad55f00afa8f38e40a2b36cacc5c32b6.yml
+++ b/www.nass.gov.ng/3e9369afad55f00afa8f38e40a2b36cacc5c32b6.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 24 Jun 2017 03:44:35 GMT
+    - Sun, 25 Jun 2017 11:36:54 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=dV5q63s%2CDStZ%2CRIs-VhCJ0; path=/
+    - PHPSESSID=6o0qV%2CQ4-zHf5rpJebPk00; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 24 Jun 2017 03:44:35 GMT
+recorded_at: Sun, 25 Jun 2017 11:36:54 GMT
