--- a/www.nass.gov.ng/ab0365787f948cd9973b88a0829cb223dad655a0.yml
+++ b/www.nass.gov.ng/ab0365787f948cd9973b88a0829cb223dad655a0.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 24 Jun 2017 03:46:22 GMT
+    - Sun, 25 Jun 2017 11:38:19 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=JxV9xPuZ2Sf-IA0kKpfpU0; path=/
+    - PHPSESSID=NIF9jfWxJPV1ok0h-U%2CGU2; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 24 Jun 2017 03:46:22 GMT
+recorded_at: Sun, 25 Jun 2017 11:38:19 GMT
