--- a/www.nass.gov.ng/e9c12c22062c81cedb0d45b2b3dd77668dd18f12.yml
+++ b/www.nass.gov.ng/e9c12c22062c81cedb0d45b2b3dd77668dd18f12.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 24 Jun 2017 03:48:53 GMT
+    - Sun, 25 Jun 2017 11:39:23 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=6pGL2soTdydyg%2CQcvz7ev3; path=/
+    - PHPSESSID=T5-sAN89GIJRJ-rI-EczR0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 24 Jun 2017 03:48:53 GMT
+recorded_at: Sun, 25 Jun 2017 11:39:23 GMT
