--- a/www.nass.gov.ng/9ff977dd060d641fd2a4b23978664f9358bab511.yml
+++ b/www.nass.gov.ng/9ff977dd060d641fd2a4b23978664f9358bab511.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 24 Jun 2017 03:49:31 GMT
+    - Sun, 25 Jun 2017 11:40:28 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=YJTlGdqe5iPrLD4ZQDRg%2C1; path=/
+    - PHPSESSID=S9%2CHQ1P0gAAyWAslrDPIf2; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 24 Jun 2017 03:49:31 GMT
+recorded_at: Sun, 25 Jun 2017 11:40:28 GMT
