--- a/www.nass.gov.ng/38de11c9bf3c071e355654fcd88580c4181f395c.yml
+++ b/www.nass.gov.ng/38de11c9bf3c071e355654fcd88580c4181f395c.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 24 Jun 2017 03:53:09 GMT
+    - Sun, 25 Jun 2017 11:43:07 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=8-WUxJukmyuHpM797BtmI0; path=/
+    - PHPSESSID=gc0Bl8S61s47MRTD2V%2CGz3; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 24 Jun 2017 03:53:09 GMT
+recorded_at: Sun, 25 Jun 2017 11:43:07 GMT
