--- a/www.nass.gov.ng/fbc433dcdf277837d2aca741990bdf8431cbb502.yml
+++ b/www.nass.gov.ng/fbc433dcdf277837d2aca741990bdf8431cbb502.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 24 Jun 2017 04:01:41 GMT
+    - Sun, 25 Jun 2017 11:54:55 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=C3y59xCzG3%2CE1xu-ro7WI2; path=/
+    - PHPSESSID=SGaI7M4lSO4PfpalS4wHL3; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 24 Jun 2017 04:01:41 GMT
+recorded_at: Sun, 25 Jun 2017 11:54:55 GMT
