--- a/www.nass.gov.ng/e75f63f26d813a4b33f1630fe8bfc6bd9e4da943.yml
+++ b/www.nass.gov.ng/e75f63f26d813a4b33f1630fe8bfc6bd9e4da943.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 24 Jun 2017 04:02:19 GMT
+    - Sun, 25 Jun 2017 11:55:33 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=jgv9Nw00q-BSJuNPPj3Cx1; path=/
+    - PHPSESSID=Ato4BlNwqJBBF1TM%2C27kK3; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 24 Jun 2017 04:02:19 GMT
+recorded_at: Sun, 25 Jun 2017 11:55:33 GMT
