--- a/www.nass.gov.ng/f02e2aa51335041bf4055d08c557f3a8010284f5.yml
+++ b/www.nass.gov.ng/f02e2aa51335041bf4055d08c557f3a8010284f5.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 24 Jun 2017 04:15:01 GMT
+    - Sun, 25 Jun 2017 12:10:11 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=lCKmjp5e2cTTow%2Cdoc9P%2C2; path=/
+    - PHPSESSID=ipmd%2Ccx6%2CRXt4FEpgOqf%2C3; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 24 Jun 2017 04:15:01 GMT
+recorded_at: Sun, 25 Jun 2017 12:10:11 GMT
