--- a/www.nass.gov.ng/eabb9d2ca0da5a52b2eb24d40c88eea8c4845cbe.yml
+++ b/www.nass.gov.ng/eabb9d2ca0da5a52b2eb24d40c88eea8c4845cbe.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 24 Jun 2017 04:15:56 GMT
+    - Sun, 25 Jun 2017 12:10:42 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=idOcUPTyWp-QqVyxEPfup0; path=/
+    - PHPSESSID=FpiX%2Capob7AaV50VIqIo%2C2; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 24 Jun 2017 04:15:56 GMT
+recorded_at: Sun, 25 Jun 2017 12:10:43 GMT
