--- a/www.nass.gov.ng/292abf35efa1888e305bf4e7cc38c7b47eab27f7.yml
+++ b/www.nass.gov.ng/292abf35efa1888e305bf4e7cc38c7b47eab27f7.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 24 Jun 2017 04:17:40 GMT
+    - Sun, 25 Jun 2017 12:12:32 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=%2CLslLCO13FMcu8aKcDtB02; path=/
+    - PHPSESSID=ibQyYFQg4OON%2CHPXn1E%2CV0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 24 Jun 2017 04:17:40 GMT
+recorded_at: Sun, 25 Jun 2017 12:12:32 GMT
