--- a/www.nass.gov.ng/abcd883fbfadf2868b3440aebca41cf8190de939.yml
+++ b/www.nass.gov.ng/abcd883fbfadf2868b3440aebca41cf8190de939.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 24 Jun 2017 04:18:33 GMT
+    - Sun, 25 Jun 2017 12:13:25 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=D%2CwJdJccTlgxPWpLrJhOz2; path=/
+    - PHPSESSID=Cpw-KAzYhdTHrGPt4nMW33; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 24 Jun 2017 04:18:33 GMT
+recorded_at: Sun, 25 Jun 2017 12:13:25 GMT
