--- a/www.nass.gov.ng/67f991cdaed5c8c1f857da2dc539c7640c53ae8e.yml
+++ b/www.nass.gov.ng/67f991cdaed5c8c1f857da2dc539c7640c53ae8e.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 24 Jun 2017 04:21:12 GMT
+    - Sun, 25 Jun 2017 12:15:31 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=QkE1M2HPoffBPamI3tZ3V3; path=/
+    - PHPSESSID=VqAxP-B4k%2CJ7tviDWo8-K2; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 24 Jun 2017 04:21:12 GMT
+recorded_at: Sun, 25 Jun 2017 12:15:31 GMT
