--- a/www.nass.gov.ng/e3c8235d623bb367bfe377878e271725f758ee35.yml
+++ b/www.nass.gov.ng/e3c8235d623bb367bfe377878e271725f758ee35.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 24 Jun 2017 04:21:47 GMT
+    - Sun, 25 Jun 2017 12:15:51 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=T-Rud1fH3STabTmx%2CcUxn3; path=/
+    - PHPSESSID=OAh8jn-mrCpsnPpFIekeB1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 24 Jun 2017 04:21:47 GMT
+recorded_at: Sun, 25 Jun 2017 12:15:51 GMT
