--- a/www.nass.gov.ng/4d551db1043f94eb6c2722060f803dc2c067c0f3.yml
+++ b/www.nass.gov.ng/4d551db1043f94eb6c2722060f803dc2c067c0f3.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 24 Jun 2017 04:26:11 GMT
+    - Sun, 25 Jun 2017 12:19:49 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=7qCGQnOnF%2Cp2t07NVEIjL1; path=/
+    - PHPSESSID=V-yB1Uv6ReqOnr8FQ21ie0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 24 Jun 2017 04:26:11 GMT
+recorded_at: Sun, 25 Jun 2017 12:19:49 GMT
