--- a/www.nass.gov.ng/f845e9156ae71d24da31ab411b67c06f231cfa93.yml
+++ b/www.nass.gov.ng/f845e9156ae71d24da31ab411b67c06f231cfa93.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 24 Jun 2017 04:28:28 GMT
+    - Sun, 25 Jun 2017 12:21:55 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=qdv9prmSjpXKWEdKn2sti0; path=/
+    - PHPSESSID=2G-iRHgG8eivxbI%2C0BGEL3; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 24 Jun 2017 04:28:28 GMT
+recorded_at: Sun, 25 Jun 2017 12:21:55 GMT
