--- a/www.nass.gov.ng/70addde23cf6668cb27ce9e8e830467349174ca6.yml
+++ b/www.nass.gov.ng/70addde23cf6668cb27ce9e8e830467349174ca6.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 24 Jun 2017 04:30:45 GMT
+    - Sun, 25 Jun 2017 12:26:03 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=HbY-hxf8ziTq8Z4hhI7zb3; path=/
+    - PHPSESSID=wYqJUr%2CIfX-qFNBGYN1680; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 24 Jun 2017 04:30:45 GMT
+recorded_at: Sun, 25 Jun 2017 12:26:03 GMT
