--- a/www.nass.gov.ng/9a6d0cd67d8247ddcfc15c84bd721b88ecbe39f2.yml
+++ b/www.nass.gov.ng/9a6d0cd67d8247ddcfc15c84bd721b88ecbe39f2.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 24 Jun 2017 04:32:28 GMT
+    - Sun, 25 Jun 2017 12:26:54 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=JD1iR5SPn60Yd2nrRU84k2; path=/
+    - PHPSESSID=U%2CMVX6CtTCOqj92wlSwMN2; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 24 Jun 2017 04:32:28 GMT
+recorded_at: Sun, 25 Jun 2017 12:26:54 GMT
