--- a/www.nass.gov.ng/e8f1c06ad01e4b6e719f6dff7c79821c5aa78608.yml
+++ b/www.nass.gov.ng/e8f1c06ad01e4b6e719f6dff7c79821c5aa78608.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 24 Jun 2017 04:32:47 GMT
+    - Sun, 25 Jun 2017 12:27:56 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=fwVGWS0eto9DNJDRUXrfX2; path=/
+    - PHPSESSID=fPw0JO0z5GiZV%2CEK5lJIp1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 24 Jun 2017 04:32:47 GMT
+recorded_at: Sun, 25 Jun 2017 12:27:56 GMT
