--- a/www.nass.gov.ng/ce5b57690617a9d50b13ef971be8127bd462c2e8.yml
+++ b/www.nass.gov.ng/ce5b57690617a9d50b13ef971be8127bd462c2e8.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 24 Jun 2017 04:34:35 GMT
+    - Sun, 25 Jun 2017 12:29:32 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=VygqM4wVCidkOaNSog%2Ctb1; path=/
+    - PHPSESSID=SFyDYULDdAsneQvL%2CLY0x1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 24 Jun 2017 04:34:35 GMT
+recorded_at: Sun, 25 Jun 2017 12:29:33 GMT
