--- a/www.nass.gov.ng/d4d5104070907d114e61ea79bb2dced335c954cb.yml
+++ b/www.nass.gov.ng/d4d5104070907d114e61ea79bb2dced335c954cb.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 24 Jun 2017 04:38:36 GMT
+    - Sun, 25 Jun 2017 12:32:39 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=IjOd1G85NKHlRN%2CCK15Eu0; path=/
+    - PHPSESSID=cDXQk2oHLXPsuGhZ4t%2C7Y0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 24 Jun 2017 04:38:36 GMT
+recorded_at: Sun, 25 Jun 2017 12:32:40 GMT
