--- a/www.nass.gov.ng/4ba0edcba58a219cf5184bf7a4093f59056937bd.yml
+++ b/www.nass.gov.ng/4ba0edcba58a219cf5184bf7a4093f59056937bd.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 24 Jun 2017 04:39:38 GMT
+    - Sun, 25 Jun 2017 12:34:01 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=E-Cp994m0bAcfbh%2CkNFSI1; path=/
+    - PHPSESSID=rh5ShD3HwcTUiSuCoyzHR0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 24 Jun 2017 04:39:38 GMT
+recorded_at: Sun, 25 Jun 2017 12:34:01 GMT
