--- a/www.nass.gov.ng/097917a439e90b8c2a4e796e20254a51fd185aef.yml
+++ b/www.nass.gov.ng/097917a439e90b8c2a4e796e20254a51fd185aef.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 24 Jun 2017 04:43:00 GMT
+    - Sun, 25 Jun 2017 12:36:43 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=AnKvMcL8YR%2CmG1ArbN7ga0; path=/
+    - PHPSESSID=jVJygfbceu6un9uTqNlsB1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 24 Jun 2017 04:43:00 GMT
+recorded_at: Sun, 25 Jun 2017 12:36:43 GMT
