--- a/www.nass.gov.ng/78389f9092a65f5cf65f0f00eef198df44e3382e.yml
+++ b/www.nass.gov.ng/78389f9092a65f5cf65f0f00eef198df44e3382e.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 24 Jun 2017 04:49:07 GMT
+    - Sun, 25 Jun 2017 12:43:09 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=VqqbFEqCrJ9IR3%2CBrfDLi0; path=/
+    - PHPSESSID=WLKzAT7KFiu41h2pP2gUV0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 24 Jun 2017 04:49:07 GMT
+recorded_at: Sun, 25 Jun 2017 12:43:09 GMT
