--- a/www.nass.gov.ng/d4dfa47bb5151b685094be141c2b8a941c797862.yml
+++ b/www.nass.gov.ng/d4dfa47bb5151b685094be141c2b8a941c797862.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 24 Jun 2017 04:49:39 GMT
+    - Sun, 25 Jun 2017 12:44:13 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=fJbnHZAbbyPBI8sYyuvru1; path=/
+    - PHPSESSID=6mClWern16J-OSz3%2CAeUm2; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 24 Jun 2017 04:49:39 GMT
+recorded_at: Sun, 25 Jun 2017 12:44:13 GMT
