--- a/www.nass.gov.ng/89fbf9207a03c7f0f05f6a65a6a02b813f9941cd.yml
+++ b/www.nass.gov.ng/89fbf9207a03c7f0f05f6a65a6a02b813f9941cd.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 24 Jun 2017 04:51:29 GMT
+    - Sun, 25 Jun 2017 12:46:12 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=PUclNnHl0P2CfUdKK%2CZtz0; path=/
+    - PHPSESSID=6JqPg32ADYwOBnr-26p1S3; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 24 Jun 2017 04:51:29 GMT
+recorded_at: Sun, 25 Jun 2017 12:46:12 GMT
