--- a/www.nass.gov.ng/d1c2a11ed1584625bda91a2743f6d0c5ccfc0902.yml
+++ b/www.nass.gov.ng/d1c2a11ed1584625bda91a2743f6d0c5ccfc0902.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 24 Jun 2017 04:52:46 GMT
+    - Sun, 25 Jun 2017 12:47:26 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=J8XM8hPX9KenVQ%2CJySaaU1; path=/
+    - PHPSESSID=cKI-6b3a8a-ePqRXAuy4E1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 24 Jun 2017 04:52:46 GMT
+recorded_at: Sun, 25 Jun 2017 12:47:26 GMT
