--- a/www.nass.gov.ng/6412454cdffd05bfad8e7cffa185e7a5a375cd9c.yml
+++ b/www.nass.gov.ng/6412454cdffd05bfad8e7cffa185e7a5a375cd9c.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 24 Jun 2017 04:58:04 GMT
+    - Sun, 25 Jun 2017 12:53:04 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=9LJ0IJzgq16NcNU9LQtr%2C1; path=/
+    - PHPSESSID=HoyAqzQpj07YghFDU3Q7x0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 24 Jun 2017 04:58:04 GMT
+recorded_at: Sun, 25 Jun 2017 12:53:04 GMT
