--- a/www.nass.gov.ng/a497715ee37ad322c8c1de4314e501ae418d5bbf.yml
+++ b/www.nass.gov.ng/a497715ee37ad322c8c1de4314e501ae418d5bbf.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 24 Jun 2017 04:59:00 GMT
+    - Sun, 25 Jun 2017 12:54:17 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=GFV5%2Ck96iN4%2Cx6XayeOKQ3; path=/
+    - PHPSESSID=yifHmpGmutCE9WwylJbfN1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 24 Jun 2017 04:59:01 GMT
+recorded_at: Sun, 25 Jun 2017 12:54:17 GMT
