--- a/www.nass.gov.ng/880c79efc08cadb459b40ba1ba756ebb51317503.yml
+++ b/www.nass.gov.ng/880c79efc08cadb459b40ba1ba756ebb51317503.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 24 Jun 2017 05:00:42 GMT
+    - Sun, 25 Jun 2017 12:57:32 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=R49cTVMhFQ2RjkmWNur1m1; path=/
+    - PHPSESSID=qbQ368npi0CDNW%2C2t7%2CoH1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 24 Jun 2017 05:00:42 GMT
+recorded_at: Sun, 25 Jun 2017 12:57:32 GMT
