--- a/www.nass.gov.ng/2eb37f2d855bfca97c080fda09ea6863e61cf757.yml
+++ b/www.nass.gov.ng/2eb37f2d855bfca97c080fda09ea6863e61cf757.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 24 Jun 2017 05:03:49 GMT
+    - Sun, 25 Jun 2017 12:59:29 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=dBz%2CXC2gw3B3Tv2dXh1jG2; path=/
+    - PHPSESSID=b1s%2CpUuhFPtiAVz4yLYP70; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 24 Jun 2017 05:03:49 GMT
+recorded_at: Sun, 25 Jun 2017 12:59:29 GMT
