--- a/www.nass.gov.ng/b98be1d86f7c968268625792f9496a7c92d209ca.yml
+++ b/www.nass.gov.ng/b98be1d86f7c968268625792f9496a7c92d209ca.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 24 Jun 2017 05:04:52 GMT
+    - Sun, 25 Jun 2017 13:01:25 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=MNhJDqyNguUVaw%2CPN1eZF1; path=/
+    - PHPSESSID=8M31NK54lOZauRcL9Fvmd0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 24 Jun 2017 05:04:52 GMT
+recorded_at: Sun, 25 Jun 2017 13:01:25 GMT
