--- a/www.nass.gov.ng/c2974c097a02062193c53bf051e0ace690dee604.yml
+++ b/www.nass.gov.ng/c2974c097a02062193c53bf051e0ace690dee604.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 24 Jun 2017 05:09:13 GMT
+    - Sun, 25 Jun 2017 13:06:10 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=U7p%2CD8BJZdg5Gn3WLnnFn0; path=/
+    - PHPSESSID=7Yymu%2CKP-RDo5e1DQqKCB1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 24 Jun 2017 05:09:14 GMT
+recorded_at: Sun, 25 Jun 2017 13:06:10 GMT
