--- a/www.nass.gov.ng/d1071cf050b2d3405f6db59a5513ef9e5231222b.yml
+++ b/www.nass.gov.ng/d1071cf050b2d3405f6db59a5513ef9e5231222b.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 24 Jun 2017 05:10:02 GMT
+    - Sun, 25 Jun 2017 13:07:07 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=2IEI%2CBsUy2XXR8ugK%2CeCY0; path=/
+    - PHPSESSID=mDUYD3MFD8IY2sq0T27gt1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 24 Jun 2017 05:10:03 GMT
+recorded_at: Sun, 25 Jun 2017 13:07:07 GMT
