--- a/www.nass.gov.ng/c03d22e2b8971049ea843fb1c5b610ec9550da75.yml
+++ b/www.nass.gov.ng/c03d22e2b8971049ea843fb1c5b610ec9550da75.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 24 Jun 2017 05:11:06 GMT
+    - Sun, 25 Jun 2017 13:07:25 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=jwblDdaYdWe17ddndhzPZ2; path=/
+    - PHPSESSID=ML9XDiq7nevs63SuiVSV%2C3; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 24 Jun 2017 05:11:06 GMT
+recorded_at: Sun, 25 Jun 2017 13:07:25 GMT
