--- a/www.nass.gov.ng/afc82284e730869e7ddee6211ac162cebaaac970.yml
+++ b/www.nass.gov.ng/afc82284e730869e7ddee6211ac162cebaaac970.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 24 Jun 2017 05:11:35 GMT
+    - Sun, 25 Jun 2017 13:07:43 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=lTc3RFF02OKbP7zfFnY6c2; path=/
+    - PHPSESSID=%2ChXoix1B18WFGKALNlxTU3; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 24 Jun 2017 05:11:35 GMT
+recorded_at: Sun, 25 Jun 2017 13:07:43 GMT
