--- a/www.nass.gov.ng/eac6742352fe806d1b1c080e926ddd8bd3afc30b.yml
+++ b/www.nass.gov.ng/eac6742352fe806d1b1c080e926ddd8bd3afc30b.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 24 Jun 2017 05:16:33 GMT
+    - Sun, 25 Jun 2017 13:12:21 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=T5fcSnQEvE%2CPo0NNRJ42z1; path=/
+    - PHPSESSID=DpB1OjYrTnt%2CAliV25edS3; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 24 Jun 2017 05:16:34 GMT
+recorded_at: Sun, 25 Jun 2017 13:12:22 GMT
